<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DbzDetailFragment"
    android:background="@drawable/hintergrund_b">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dbzDetail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="@color/dark_gray"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="8dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/iv_detail_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/die_detailansicht_des_ausgew_hlten_charakters"
            android:background="@color/carbon_black"
            android:padding="8dp"
            android:visibility="gone"/>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/cv_dbzDetail"
        app:layout_constraintStart_toStartOf="@+id/cv_dbzDetail"
        app:layout_constraintTop_toBottomOf="@+id/cv_dbzDetail"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tv_ki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ki"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible"/>


    <TextView
        android:id="@+id/tv_isDestroyed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/is_destroyed"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible"/>


    <TextView
        android:id="@+id/tv_maxKi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/max_ki"
        app:layout_constraintEnd_toEndOf="@+id/tv_ki"
        app:layout_constraintStart_toStartOf="@+id/tv_ki"
        app:layout_constraintTop_toBottomOf="@+id/tv_ki"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible"/>


    <TextView
        android:id="@+id/tv_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/race"
        app:layout_constraintEnd_toEndOf="@+id/tv_maxKi"
        app:layout_constraintStart_toStartOf="@+id/tv_maxKi"
        app:layout_constraintTop_toBottomOf="@+id/tv_maxKi"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible"/>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_dbzDetail"
        android:scrollbars="none">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            android:backgroundTint="@color/carbon_black"
            app:strokeWidth="1dp"
            app:strokeColor="@color/white"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/description"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="visible"/>
        </com.google.android.material.card.MaterialCardView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>